[metadata]
name = tugboat
summary = Explore Open Pull Requests
description-file =
    README.rst
author = Kevin L. Mitchell
author-email = kevin.mitchell@rackspace.com
home-page = https://github.com/klmitch/tugboat
    Development Status :: 3 - Alpha
    Environment :: Development
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    tugboat

[entry_points]
console_scripts =
    tugboat = tugboat.reports:report.console

[wheel]
universal = 1
